--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Travel'
+- GITenberg
 tableOfContents: The family that goes abroad because it's the thing to do -- The man
   who travels alone -- The unprotected female tourist -- The united Englishmen who
   travel for fun -- The art tourist -- The tourist in search of knowledge -- The Alpine
